deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamplayerapp
  namespace: teamplayerapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: teamplayerapp
  template:
    metadata:
      labels:
        app: teamplayerapp
    spec:
      containers:
        - name: teamplayerapp
          image: mateageorgievska13531/teamplayerapp:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config
              subPath: application.properties
      volumes:
        - name: config-volume
          configMap:
            name: app-config
            items:
              - key: application.properties
                path: application.properties
