service.yml
apiVersion: v1
kind: Service
metadata:
  name: teamplayerapp-service
  namespace: teamplayerapp
spec:
  selector:
    app: teamplayerapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9092
