ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teamplayerapp-ingress
  namespace: teamplayerapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: teamplayerapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teamplayerapp-service
                port:
                  number: 9092
